did not need qoutes in href tag

--- a/django_music/music/templates/music/music_list.html
+++ b/django_music/music/templates/music/music_list.html
@@ -18,7 +18,7 @@
                     </audio>  
                 </div>
                 <div class="card footer"> 
-                    <a href="{% 'url music-detail item.id' %}" class="btn btn-outline-info"> View Details</a>
+                    <a href="{% url music-detail item.id %}" class="btn btn-outline-info"> View Details</a>
                 </div>
             </div>
         </div>
