--- a/django_music/music/templates/music/base.html
+++ b/django_music/music/templates/music/base.html
@@ -26,7 +26,7 @@
         {% block content%}
         {% endblock %}
     </div>
-    <script src="{% static 'js/jquery.min.js %}"></script>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
