jk again, understore replaced with dash line 19

--- a/django_music/music/templates/music/base.html
+++ b/django_music/music/templates/music/base.html
@@ -16,7 +16,7 @@
             </button>
             <div class="navbar-nav">
                 <div class="nav-item ml-auto">
-                    <a class="nav-item nav-link" href="{% url 'music_create' %}">New Music</a>
+                    <a class="nav-item nav-link" href="{% url 'music-create' %}">New Music</a>
                 </div>
             </div>
         </div>
