--- a/django_music/music/templates/music/music_create.html
+++ b/django_music/music/templates/music/music_create.html
@@ -7,7 +7,7 @@
     <div class="row jcc">
         <div class="col-md-6">
             <form method="POST" enctype="multipart/form-data">
-                {% crsf_token%}
+                {% csrf_token %}
                 <h1 class="text-center mb-4">Upload Song</h1>
                 {{form.as_p}}
                 <button class="btn btn-outline-info btn-block mt-4" type="submit">Upload</button>
