--- a/django_music/music/templates/music/music_list.html
+++ b/django_music/music/templates/music/music_list.html
@@ -1,6 +1,6 @@
 {% extends 'music/base.html' %}
 
-{% block content%}
+{% block content %}
 </br>
 <div class="container">
     <div class="row row-cols-1 rows-col-md-4">
@@ -13,12 +13,12 @@
                     <p class="card-text">Category: {{ item.category }}</p>
                     <p class="card-text"> Uploaded on:{{ item.upload }}</p>
                     <audio controls style="max-width: 100%;">
-                        <source src="{{items.song.url}}" type="audio/mpeg">
+                        <source src="{{item.song.url}}" type="audio/mpeg">
                         Your broswer does not support the audio element.
                     </audio>  
                 </div>
                 <div class="card footer"> 
-                    <a href="{% url music_detail item.id %}" class="btn btn-outline-info"> View Details</a>
+                    <a href="{% url 'music-detail' item.id %}" class="btn btn-outline-info"> View Details</a>
                 </div>
             </div>
         </div>
